--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "seed": "node -r dotenv/config ./scripts/seed.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.445.0",
     "@emailjs/browser": "^3.11.0",
     "@stripe/react-stripe-js": "^2.3.1",
     "@stripe/stripe-js": "^2.1.11",
