--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@stripe/stripe-js": "^2.1.11",
     "@vercel/postgres": "^0.5.1",
     "accept-language": "^3.0.18",
+    "adblock-detect-react": "^1.1.0",
     "aws-sdk": "^2.1488.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
